# langgrpaph-ai-bot

./: Dockerfile  README.md  docker-compose.yaml  env  pyproject.toml
fixtures/: test.txt
prometheus/: prometheus.yml
src/: config.py
src/bot/: main.py
src/core/data/db/chroma/: config.py
src/core/data/db/postgres/: engine.py  session.py
src/core/data/db/postgres/migrations/: alembic.ini  env.py
src/core/domain/: ask_question.py  document_service.py  memory.py
