[project]
name = "langgraph-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain[ollama]>=0.3.25",
    "langgraph>=0.4.7",
    "langgraph-checkpoint-postgres>=2.0.21",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "sentence-transformers>=4.1.0",
]
